@@ -7,7 +7,8 @@
   * retire `bitcount_lookup[256]` table
   * improve `util.count_n()` error messages
   * avoid `util` module tests from being run more than once in each
-    call to `bitarray.test()` when called multiple times
+    call to `bitarray.test()` when called multiple times in the same
+    Python process, see #6e52e49a
   * improve testing
 
 
